--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <button type="button" name="myButton" onClick="loadTemplate(1)">New Listing Template</button>
-<button type="button" name="myButton" onClick="loadTemplate(2)">Newsletter Template</button>
+<!-- <button type="button" name="myButton" onClick="loadTemplate(2)">Newsletter Template</button> -->
 <button type="button" name="myButton" onClick="loadTemplate(3)">Pre-Con Template</button>
 <script src="//editor.unlayer.com/embed.js"></script>
 <div id="editor"></div>
